# kuberviewer

./: .cta.json  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: main.py  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/kube/: discovery.py  exec.py  logs.py  manager.py  metrics.py  oidc.py  prometheus.py  resources.py  watch.py
backend/app/routers/: auth.py  cluster.py  contexts.py  discovery.py  exec.py  logs.py  metrics.py  prometheus.py  resources.py  watch.py
backend/tests/: conftest.py  test_auth.py  test_cluster.py  test_config.py  test_contexts.py  test_discovery_router.py  test_kube_discovery.py  test_kube_manager.py  test_kube_metrics.py  test_kube_oidc.py  test_kube_prometheus.py  test_kube_resources.py  test_metrics_router.py  test_models.py  test_prometheus_router.py  test_resources_router.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  main.tsx  routeTree.gen.ts  router.tsx  styles.css  types.ts
frontend/src/components/: QueryError.tsx
frontend/src/hooks/: use-api-resources.ts  use-contexts.ts  use-exec-terminal.ts  use-log-stream.ts  use-log-terminal.ts  use-metrics.ts  use-page-visible.ts  use-polling.tsx  use-prometheus.ts  use-resource-list.ts  use-resource-watch.ts  use-resource.ts  use-settings.tsx  (+2 more)
src/: styles.css
src/hooks/: use-api-resources.ts  use-contexts.ts  use-resource-list.ts  use-resource.ts
src/routes/: __root.tsx  index.tsx
(+96 files in other folders)
